--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,19 +25,92 @@
         app:layout_constraintTop_toBottomOf="@id/imageView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/prenotazioniButton"/>
+        app:layout_constraintBottom_toTopOf="@id/carrelloButton"/>
 
     <Button
-        android:id="@+id/prenotazioniButton"
+        android:id="@+id/carrelloButton"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:text="Prenotazioni"
+        android:text="Carrello"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
         app:layout_constraintTop_toBottomOf="@id/nomeTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/settingsButton"/>
+
+    <TableLayout
+        android:id="@+id/tablePrenotazioni"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        app:layout_constraintTop_toBottomOf="@id/carrelloButton"
+        app:layout_constraintBottom_toTopOf="@id/settingsButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+    <!--
+            <TextView
+                android:id="@+id/txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Prenotazioni effettuate"
+                android:textSize = "20dp"
+                android:textStyle="bold">
+
+            </TextView>
+
+            <TableRow android:background="@color/blue" android:padding="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:text="Id" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:text="Nome Hotel" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:text="Data check-in" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:text="Data check-out" />
+            </TableRow>
+
+            <TableRow android:background="#F0F7F7" android:padding="5dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="1" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Nome hotel" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="checkin" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="checkout" />
+            </TableRow>
+        </TableLayout> -->
+
     <Button
         android:id="@+id/settingsButton"
         android:layout_width="match_parent"
@@ -45,7 +118,7 @@
         android:text="Modifica dati personali"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/prenotazioniButton"/>
+        app:layout_constraintTop_toBottomOf="@id/carrelloButton"/>
 
     <Button
         android:id="@+id/logoutButton"
