--- a/app/src/main/res/layout/fragment_dettagli_hotel.xml
+++ b/app/src/main/res/layout/fragment_dettagli_hotel.xml
@@ -204,16 +204,19 @@
                 app:layout_columnWeight="1">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:id="@+id/image1"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:src="@drawable/baseline_fastfood_24" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textViewService1"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Ristorante"
                     android:textStyle="bold" />
 
@@ -228,16 +231,19 @@
                 app:layout_columnWeight="1">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:id="@+id/image2"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:src="@drawable/baseline_beach_access_24" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textViewService2"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Spiaggia"
                     android:textStyle="bold" />
 
@@ -252,16 +258,19 @@
                 app:layout_columnWeight="1">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:id="@+id/image3"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:src="@drawable/baseline_fastfood_24" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textViewService3"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Ristorante"
                     android:textStyle="bold" />
 
@@ -276,16 +285,19 @@
                 app:layout_columnWeight="1">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:id="@+id/image4"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:src="@drawable/baseline_beach_access_24" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textViewService4"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Spiaggia"
                     android:textStyle="bold" />
 
@@ -300,14 +312,16 @@
                 app:layout_columnWeight="1">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:id="@+id/image5"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:src="@drawable/baseline_fastfood_24" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textViewService5"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="Ristorante"
@@ -324,16 +338,19 @@
                 app:layout_columnWeight="1">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:id="@+id/image6"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:src="@drawable/baseline_beach_access_24" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textViewService6"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Spiaggia"
                     android:textStyle="bold" />
 
@@ -348,16 +365,19 @@
                 app:layout_columnWeight="1">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:id="@+id/image7"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:src="@drawable/baseline_fastfood_24" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textViewService7"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Ristorante"
                     android:textStyle="bold" />
 
@@ -372,16 +392,19 @@
                 app:layout_columnWeight="1">
 
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:id="@+id/image8"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:src="@drawable/baseline_beach_access_24" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/textViewService8"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Spiaggia"
                     android:textStyle="bold" />
 
