--- a/app/src/main/res/layout/hotel_card_view_design.xml
+++ b/app/src/main/res/layout/hotel_card_view_design.xml
@@ -29,7 +29,10 @@
                 android:paddingBottom="5dp"
                 android:scaleType="center"
                 android:src="@drawable/photo_1506905925346_21bda4d32df4"
-                app:circularflow_radiusInDP="10dp" />
+                app:circularflow_radiusInDP="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
                 android:id="@+id/textNome"
