--- a/app/src/main/res/layout/ristoranti_card_view.xml
+++ b/app/src/main/res/layout/ristoranti_card_view.xml
@@ -11,7 +11,12 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="30dp">
+        app:cardCornerRadius="30dp"
+        android:id="@+id/cardViewID"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:scrollbarSize="15dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -25,46 +30,49 @@
                 android:scaleType="center"
                 android:src="@drawable/photo_1506905925346_21bda4d32df4"
                 app:circularflow_radiusInDP="10dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
                 android:id="@+id/textNome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
+                android:textSize="24dp"
                 android:text="TextView"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.05"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias=".25" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.2"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/textPosizione"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:layout_marginTop="5dp"
+                android:textSize="16dp"
+                android:gravity="center"
+
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/textNome"
-                app:layout_constraintTop_toBottomOf="@+id/textNome" />
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@id/ratingBar"
+                app:layout_constraintStart_toStartOf="@id/ratingBar"
+                app:layout_constraintEnd_toEndOf="@id/ratingBar"/>
 
             <RatingBar
                 android:id="@+id/ratingBar"
-                style="?android:attr/ratingBarStyleIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textPosizione" />
+                android:gravity="center"
+                android:isIndicator="true"
+                app:layout_constraintTop_toBottomOf="@id/textNome"
+                app:layout_constraintStart_toStartOf="@id/textNome"
+                app:layout_constraintEnd_toEndOf="@id/textNome"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:layout_marginTop="10dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
